<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createEventButtonText"
        app:layout_constraintLeft_toRightOf="@id/addClassButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <CalendarView
        android:id="@+id/mainCalendar"
        android:layout_width="361dp"
        android:layout_height="320dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100px"/>

    <Button
        android:id="@+id/addClassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addClassButtonText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/todaysEventsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todaysEventsText"
        app:layout_constraintTop_toBottomOf="@id/mainCalendar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>